<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="16dp">

	<TextView
		android:id="@+id/title_textview"
		style="@style/TextAppearance.AppCompat.Headline"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:text="@string/title_read_document_chip"
		android:textAlignment="center" />

	<ImageView
		android:id="@+id/status_imageview"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_margin="16dp"
		android:layout_weight="1"
		android:adjustViewBounds="true"
		android:contentDescription="@string/title_read_document_chip"
		android:maxHeight="160dp"
		android:src="@drawable/nfc_smartphone_pulsating" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="56dp"
		android:orientation="vertical">

		<TextView
			android:id="@+id/status_textview"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dp"
			android:text="@string/status_place_phone_on_document"
			android:textAlignment="center"
			android:textSize="16sp"
			tools:text="@string/status_chip_reading" />

		<com.google.android.material.progressindicator.LinearProgressIndicator
			android:id="@+id/progressbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dp"
			android:indeterminate="true"
			android:max="1000000"
			android:visibility="gone"
			tools:visibility="visible" />
	</LinearLayout>

	<Button
		android:id="@+id/cancel_button"
		style="@style/Widget.Material3.Button.OutlinedButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/cancel" />
</LinearLayout>